Add Aux Links (Ed and Gradescope) and add more details about grading.

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -73,9 +73,9 @@ a {
 }
 
 // Hide top right navbar (aux links)
-.aux-nav {
-  display: none !important;
-}
+// .aux-nav {
+//  display: none !important;
+// }
 
 // Customize search bar
 .search-input {
